--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha --compilers jsx:babel-register --opts 'support/mocha.opts' 'src/**/*.spec.*'",
+    "test": "jest",
     "lint": "eslint --format 'node_modules/eslint-friendly-formatter' --ext .js,.jsx ./src/client ./modules",
     "start": "npm run watch:client & npm run watch:server",
     "watch:client": "webpack-dev-server -d",
@@ -17,11 +17,12 @@
     "autoprefixer": "^6.3.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^6.2.1",
+    "babel-plugin-import": "^1.8.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
     "chai": "^3.5.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "enzyme": "^2.2.0",
     "eslint": "^2.7.0",
     "eslint-config-smashing-boxes": "^2.0.0",
@@ -29,11 +30,16 @@
     "eslint-plugin-react": "^4.3.0",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.8.1",
+    "jest": "^23.4.0",
+    "less": "^3.7.1",
+    "less-loader": "^4.1.0",
+    "less-vars-to-js": "^1.2.1",
     "mocha": "^2.4.5",
     "normalize.css": "^4.0.0",
     "parallelshell": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.9",
+    "puppeteer": "^1.5.0",
     "react-test-renderer": "^16.2.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
@@ -44,6 +50,7 @@
   },
   "dependencies": {
     "antd": "^3.6.6",
+    "aphrodite": "^2.2.2",
     "axios": "^0.18.0",
     "es6-promise": "^4.2.2",
     "express": "^4.16.2",
